# Python-FastAPI-Template

./: .env  .gitignore  README.md  pyproject.toml  startup.sh
.github/workflows/: main_health-bot-api.yml
app/: dependencies.py  main.py
app/api/: router.py  user.py
app/commands/: create_user.py  delete_user.py  update_user.py
app/config/: keyvault_client.py  settings.py
app/core/: alembic.ini
app/models/: user.py
app/queries/: get_user.py
app/repositories/: user_repository.py
app/schemas/: user.py
tests/: test_app.py
